--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@microsoft/microsoft-graph-client": "^3.0.2",
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
