--- a/package.json
+++ b/package.json
@@ -11,11 +11,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@microsoft/microsoft-graph-client": "^3.0.2",
+    "@azure/msal-node": "^1.9.0",
+    "@microsoft/microsoft-graph-client": "^3.0.0",
     "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
+    "date-fns": "^2.23.0",
+    "date-fns-tz": "^1.1.6",
     "express": "^4.18.1",
+    "express-promise-router": "^4.1.0",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.12.1",
+    "hbs": "^4.2.0",
+    "isomorphic-fetch": "^3.0.0",
     "mongoose": "^6.3.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "windows-iana": "^5.0.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
