--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "express": "^4.18.1",
     "express-promise-router": "^4.1.0",
     "express-session": "^1.17.2",
-    "express-validator": "^6.12.1",
+    "express-validator": "^6.14.1",
     "hbs": "^4.2.0",
     "isomorphic-fetch": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "uuid": "^8.3.2",
     "windows-iana": "^5.0.2"
