--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@microsoft/microsoft-graph-client": "^3.0.0",
     "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.23.0",
     "date-fns-tz": "^1.1.6",
     "express": "^4.18.1",
