--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "express-validator": "^6.14.1",
     "hbs": "^4.2.0",
     "isomorphic-fetch": "^3.0.0",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
+    "nodemailer": "^6.7.5",
     "uuid": "^8.3.2",
     "windows-iana": "^5.0.2"
   },
