--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
     "uuid": "^8.3.2",
     "windows-iana": "^5.0.2"
