--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express-promise-router": "^4.1.0",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.1",
-    "hbs": "^4.2.0",
+    "handlebars": "^4.7.7",
     "isomorphic-fetch": "^3.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
