--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@azure/msal-node": "^1.9.0",
     "@microsoft/microsoft-graph-client": "^3.0.0",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
