--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose-sequence": "^5.3.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
+    "stripe": "^10.15.0",
     "uuid": "^8.3.2",
     "windows-iana": "^5.0.2"
   },
