--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@azure/msal-node": "^1.9.0",
     "@microsoft/microsoft-graph-client": "^3.0.0",
+    "apple-auth": "^1.0.7",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
@@ -23,6 +24,7 @@
     "express-promise-router": "^4.1.0",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.1",
+    "google-auth-library": "^8.7.0",
     "handlebars": "^4.7.7",
     "isomorphic-fetch": "^3.0.0",
     "joi": "^17.6.0",
