Apple login ready to test

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ MAIL_PASSWORD = '4ph3x.3616'
 MAIL_PORT = 2525
 
 FRONTEND_URL = 'http://localhost:3000/'
+
+GOOGLE_CLIENT_ID = ''
+GOOGLE_CLIENT_SECRET = ''
+
+APPLE_CLIENT_ID = ''
